syntax = "proto3";

package payment.v1;

import "google/api/annotations.proto";

// The go_package option specifies the import path for the generated Go code.
option go_package = "github.com/QuanQLee/e-commerce-project/services/Payment/api;api";

import "google/protobuf/empty.proto";

service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (PaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payment"
      body: "*"
    };
  }

  rpc ListPayments (google.protobuf.Empty) returns (ListPaymentsResponse) {
    option (google.api.http) = {
      get: "/v1/payment"
    };
  }

  rpc UpdatePaymentStatus (UpdatePaymentStatusRequest) returns (PaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payment/{payment_id}/status"
      body: "*"
    };
  }

}

message CreatePaymentRequest {
  string  order_id = 1;
  double  amount   = 2;
}

message PaymentResponse {
  string payment_id = 1;
  string status     = 2;
}

message PaymentItem {
  string payment_id = 1;
  double amount     = 2;
  string status     = 3;
}

message UpdatePaymentStatusRequest {
  string payment_id = 1;
  string status     = 2;
}

message ListPaymentsResponse {
  repeated PaymentItem payments = 1;
}

